--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
 
     <section id="hero">
       <div class="container">
-        <div class="hero"></div>
+        <div class="hero">
+          <h1>Section Hero</h1>
+        </div>
       </div>
     </section>
 
