--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
       <div class="container">
         <div class="hero">
           <h1>Section Hero</h1>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est
+            numquam, eveniet sequi et ea, dolorem quos quam, illum harum itaque
+            dolorum. Fugit at ipsum assumenda perspiciatis optio minus facilis
+            sint!
+          </p>
         </div>
       </div>
     </section>
